# aircraft_cabling_cv

./: .gitignore  CMakeLists.txt  README.md  cable.pcd  package.xml  plane2.pcd  pubsub.cpp  table_scene_mug_stereo_textured_cylinder.pcd
MATLABCode/: RefineGP.m  RefineGP_test.m
bag/: blocks0.bag.REMOVED.git-id
data/: sparse_config1.csv
docs/: how-to-pcl.md  how-to-pcl.txt  how-to-xtion.md  how-to-xtion.txt  topic-explanation.md
launch/: data_collection.launch  isolation.launch
msg/: CableState.msg  MinimalCableState.msg
scripts/: isolation.py
src/: calculate_distance.py  color_filter.py  cylinder_segmentation.cpp  find_gt.py  gpr_ros.py  id_markers.cpp  id_markers.py  k_means.py  line_segmentation.cpp  linear_comparison.hpp  organized_segmentation_demo.cpp  planar_segmentation.cpp  pubsub.cpp  ransac.cpp  read_points.cpp
src/old/: cylinder_segmentation.cpp  ransac.cpp
