<?xml version="1.0"?>
<package>
  <name>aircraft_cabling_cv</name>
  <version>1.0.0</version>
  <description>Perception algorithm for cables in aircraft fuselage</description>

  <maintainer email="ajshah@mit.edu">Ankit Shah</maintainer>
  <maintainer email="pravinas@mit.edu">Pravina Samaratunga</maintainer>

  <license>TODO</license>


  <author email="pravinas@mit.edu">Pravina Samaratunga</author>


  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>libpcl-all-dev</build_depend>

  <run_depend>pcl_conversions</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>libpcl-all-dev</run_depend>

</package>
